--- a/workspace-app/.env.production
+++ b/workspace-app/.env.production
@@ -1,4 +1,5 @@
-VITE_API_BASE_URL=https://api.ourproject.app
+VITE_API_BASE_URL=/api
+VITE_API_URL=/api
 VITE_APP_NAME=Our Project
 VITE_APP_URL=https://ourproject.app
 VITE_APP_DESCRIPTION=Complete workspace solution for managing projects, clients, and more
