feat: Add WhatsApp automation module, dynamic mobile nav, and Google OAuth config
- Add WhatsApp automation service with multi-language templates (8 languages)
- Add scheduler jobs for bill reminders, task deadlines, and daily summaries
- Add WhatsApp settings page with kewhats.app API integration
- Implement dynamic mobile bottom navigation based on active module
- Add public endpoint for Google OAuth Client ID configuration
- Update Login page to fetch Google OAuth settings from admin panel
- Fix various navigation routes to match App.jsx routes
- Add System module to bottom navigation

--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,14 @@ flow.md
 maynewfeat.md
 plan.md
 selectbox.md
+apikewhats.md
+area.md
 *.md
 
 # Misc
 .cache/
 .temp/
+
+# Others
+deploy/
+ucuydb.sqlite
